# omni-ruff

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  clone_ruff_config.py  copy_ruff_config.py  copy_ruff_config_shell.sh  pyproject.toml  ruff.toml  setup.cfg  setup.py  template.env
hooks/: clone_ruff_config.py  copy_ruff_config.py  copy_ruff_config.sh  copy_ruff_config_shell.sh  ruff.toml
omni_ruff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
