[project]
requires-python = ">= 3.9"
name = "omni-ruff"
version = "0.5.1"
description = "global ruff"
authors = [
   { name ="Steven Ramdas" , email = "steven.ramdas2@stedin.net" },
]
readme = "README.md"
dependencies = [
]

[tool.rye]
managed = true
lock-with-sources = true
dev-dependencies = [
    # Dev dependencies in order to run pytests
    "pre-commit>=3.7.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: core utilities"
]

[tool.hatch.metadata]
allow-direct-references = true
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["omni_ruff"]
