[metadata]
name = omni_ruff
version = 0.6.6
description = Ruff config apply-er
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/srmds/omni-ruff
author = Steven Ramdas 
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.9


[options.entry_points]
console_scripts =
    copy-ruff-config = hooks.copy_ruff_config:main
    clone-ruff-config = hooks.clone_ruff_config:main


[bdist_wheel]
universal = True